# galerist-svn

branches/0.1/: Doxyfile  galerist.pro
branches/0.1/src/: Makefile  images.qrc  main.cpp  qt.conf  src.pro
branches/0.1/src/core/: imageitem.cpp  imagemodel.h  metadatamanager.cpp
branches/0.1/src/core/jobs/: abstractjob.h  copyjob.cpp  copyjob.h  jobs.pro  readjob.h
branches/0.1/src/core/network/: updater.cpp  updater.h
branches/0.1/src/dialogs/: newwizard.h  wizard.cpp
branches/0.1/src/translations/: english.ts
branches/0.1/src/widgets/: gallerytreeview.h  imageaddprogress.ui  lineedit.cpp  newcopypage.cpp  newcopypage.h  newcopypage.ui  newfinishpage.ui  newselectionpage.h  newwelcomepage.h  photoitem.cpp  photoitem.h  photoname.cpp  photoname.h  photoview.cpp  textedit.h  widgets.pro
branches/0.1/templates/: cpp
branches/0.2/: configure.bat
branches/0.2/src/core/jobs/: abstractjob.cpp  readjob.h
branches/0.2/src/core/network/: uniupdatemanager.h
branches/0.2/src/dialogs/: dialogs.pro
branches/0.2/src/widgets/: imageaddprogress.h  photocontrol-crop.ui  photocontrol-main.ui  photoview.h  searchbar.h  widgets.pro
branches/0.2/src/widgets/photowidgets/: photoitem.cpp  photoitem.h
branches/0.2/src/widgets/wizard/: finishpage.h  selectionpage.h  selectionpage.ui  summarypage.h  welcomepage.h
tags/0.1/: Galerist.sln  Galerist.vcproj  galerist.pro
tags/0.1/src/: icons.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  src.pro
tags/0.1/src/core/: core.pro  data.cpp  errorhandler.cpp  metadatamanager.h
tags/0.1/src/core/jobs/: abstractjob.cpp
tags/0.1/src/core/network/: network.pro  updater.h
tags/0.1/src/dialogs/: configuration.ui  dialogs.pro  wizard.h
tags/0.1/src/translations/: translations.pro
tags/0.1/src/widgets/: imageaddprogress.h  newselectionpage.cpp  newwelcomepage.cpp  photocontrol.h  tooltip.cpp  tooltip.h
tags/0.2.0/src/: mainwindow.cpp  mainwindow.h  namespace-def.h  resources.qrc  src.pro
tags/0.2.0/src/core/: core.pro  imageitem.cpp  metadatamanager.cpp
tags/0.2.0/src/core/jobs/: copyjob.h  readjob.cpp
tags/0.2.0/src/core/network/: network.pro  uniupdatemanager.cpp
tags/0.2.0/src/dialogs/: configuration.cpp  newgallerywizard.cpp
tags/0.2.0/src/translations/: english.ts
tags/0.2.0/src/widgets/: gallerytreeview.cpp  inputzoomdialog.cpp  inputzoomdialog.h  lineedit.h  photocontrol-resize.ui  photocontrol.h  tooltip.cpp  tooltip.h
tags/0.2.0/src/widgets/photowidgets/: photoitem.cpp  photoloading.h  photopixmap.h  photowidgets.pro
tags/0.2.0/src/widgets/wizard/: finishpage.cpp  summarypage.ui  welcomepage.cpp
tags/0.2.0/templates/: cpp
trunk/: CMakeLists.txt  ChangeLog  Doxyfile  Galerist.vcproj  configure.bat  galerist.pro  galerist.sln
trunk/src/: CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namespace-def.h  resources.qrc  src.pro
trunk/src/core/: CMakeLists.txt  core.pro  data.cpp  data.h  errorhandler.cpp  errorhandler.h  exifmanager.cpp  exifmanager.h  imageitem.cpp  imageitem.h  imagemodel.cpp  imagemodel.h  job.cpp  job.h  jobmanager.cpp  jobmanager.h  metadatamanager.cpp  metadatamanager.h
trunk/src/core/jobs/: CMakeLists.txt  abstractjob.cpp  abstractjob.h  copyjob.cpp  copyjob.h  createjob.cpp  createjob.h  deletejob.cpp  deletejob.h  jobs.pro  movejob.cpp  movejob.h  readjob.cpp  readjob.h  transformationjob.cpp  transformationjob.h
trunk/src/core/network/: CMakeLists.txt  network.pro  uniupdatemanager.cpp  uniupdatemanager.h  updater.cpp  updater.h
trunk/src/dialogs/: CMakeLists.txt  configuration.cpp  configuration.h  configuration.ui  dialogs.pro  gwizard.cpp  gwizard.h  newgallery.cpp  newgallery.h  newgallerywizard.cpp  newgallerywizard.h  newwizard.cpp  uniupdate.cpp  uniupdate.h  uniupdate.ui
trunk/src/translations/: CMakeLists.txt  english.ts  translations.pro
trunk/src/widgets/: CMakeLists.txt  gallerytreeview.cpp  gallerytreeview.h  imageaddprogress.cpp  imageaddprogress.h  imagedelegate.cpp  imagedelegate.h  inputzoomdialog.cpp  inputzoomdialog.h  lineedit.cpp  lineedit.h  listview.cpp  listview.h  newcopypage.cpp  newcopypage.h  newfinishpage.cpp  newfinishpage.h  newimageselectpage.cpp  newimageselectpage.h  newimageselectpage.ui  newselectionpage.cpp  newselectionpage.h  newselectionpage.ui  newwelcomepage.cpp  newwelcomepage.h  newwelcomepage.ui  photocontrol-blur.ui  photocontrol-crop.ui  photocontrol-main.ui  photocontrol-resize.ui  photocontrol.cpp  photocontrol.h  photocontrol.ui  photodescription.cpp  photodescription.h  photoitem.cpp  photoitem.h  photoview.cpp  photoview.h  propertiesview.cpp  (+11 more)
trunk/src/widgets/photowidgets/: photodescription.cpp  photodescription.h  photoitem.cpp  photoitem.h  photoloading.cpp  photoloading.h  photoname.cpp  photoname.h  photopixmap.cpp  photopixmap.h  photorect.cpp  photorect.h  photowidgets.pro
trunk/src/widgets/wizard/: CMakeLists.txt  copypage.cpp  copypage.h  copypage.ui  finishpage.cpp  finishpage.h  selectionpage.cpp  selectionpage.h  selectionpage.ui  summarypage.cpp  summarypage.h  summarypage.ui  welcomepage.cpp  welcomepage.h  wizard.pro
